--- a/classs5.ipynb
+++ b/classs5.ipynb
@@ -3474,11 +3474,132 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 8-may-19  FUNCTIONS"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def result(name, m1, m2, m3):\n",
+    "    total = m1+m2+m3\n",
+    "    print(f\"Name of student is {name}\")\n",
+    "    print(f\"Total Marks are: {total}\")\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Name of student is Ali\n",
+      "Total Marks are: 247\n"
+     ]
+    }
+   ],
+   "source": [
+    "result(\"Ali\",78,79,90)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Name of student is Asad\n",
+      "Total Marks are: 247\n"
+     ]
+    }
+   ],
+   "source": [
+    "result(\"Asad\",78,79,90)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter your name: ll\n",
+      "enter your maths marks: 55\n",
+      "enter your computer marks: 66\n",
+      "enter your english marks: 77\n",
+      "Name of student is ll\n",
+      "Total Marks are: 198\n",
+      "grade is : C\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "198"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def result(name, maths, comp, eng):\n",
+    "    grade=\"\"\n",
+    "    total = (maths+comp+eng)\n",
+    "    per = (total/300)*100\n",
+    "    print(f\"Name of student is {name}\")\n",
+    "    print(f\"Total Marks are: {total}\")\n",
+    "    \n",
+    "    if per > 100:\n",
+    "        print('error')\n",
+    "\n",
+    "    elif per >=90:\n",
+    "        grade='A+'\n",
+    "    elif per>=80:    \n",
+    "        grade='A'\n",
+    "    elif per>=70:    \n",
+    "        grade='B'\n",
+    "    elif per>=60:    \n",
+    "        grade='C'\n",
+    "    elif per>=50:    \n",
+    "        grade='D'\n",
+    "    else:\n",
+    "        grade = 'sorry you are fail'\n",
+    "    print(f\"grade is : {grade}\")\n",
+    "    return total\n",
+    "name = input(\"Enter your name: \")\n",
+    "maths =int( input(\"enter your maths marks: \"))\n",
+    "comp = int(input(\"enter your computer marks: \"))\n",
+    "eng = int(input (\"enter your english marks: \"))\n",
+    "\n",
+    "rse= result(name,maths, comp, eng)\n",
+    "rse"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "\n"
+   ]
   }
  ],
  "metadata": {
