--- a/classs5.ipynb
+++ b/classs5.ipynb
@@ -3593,12 +3593,123 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 15-may-19\n",
+    "\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n"
+    "def myname(Fname, lname, mname = ''):\n",
+    "    if name:\n",
+    "        full_name = Fname + '' + mname+' '+ lname\n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Name: Ali Aamir,Age: 12\n"
+     ]
+    }
+   ],
+   "source": [
+    "def personalInformation(firstName, lastName, middleName = \"\", age=0, address=\"\"):\n",
+    "    result = \"Name: \"\n",
+    "    \n",
+    "    result += firstName\n",
+    "    if middleName !=\"\":\n",
+    "        result+=\"\" + middleName\n",
+    "    result+=\"\" + lastName\n",
+    "    \n",
+    "    if age !=0:\n",
+    "        result+= \",Age: \"+str(age)\n",
+    "        \n",
+    "    if address !=\"\":\n",
+    "        result+= \",address:\"+ address\n",
+    "        \n",
+    "    return result\n",
+    "print(personalInformation (\"Ali \",\"Aamir\", age = 12))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "***here is your pizza***\n",
+      "c\n",
+      "h\n",
+      "e\n",
+      "e\n",
+      "s\n",
+      "e\n"
+     ]
+    }
+   ],
+   "source": [
+    "def pizza(topping):\n",
+    "    print(\"***here is your pizza***\")\n",
+    "    for toppings in topping:\n",
+    "        print(toppings)\n",
+    "\n",
+    "        \n",
+    "pizza('cheese')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "***here is your pizza***\n",
+      "cheese\n",
+      "mushrooms\n",
+      "olive\n"
+     ]
+    }
+   ],
+   "source": [
+    "def pizza(*topping):\n",
+    "    print(\"***here is your pizza***\")\n",
+    "    for toppings in topping:\n",
+    "        print(toppings)\n",
+    "\n",
+    "        \n",
+    "pizza('cheese','mushrooms','olive') "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def kababjees(food,*drink, **sweet_dish):\n",
+    "    print(food, drink[0], sweet_dish)\n",
+    "          \n",
+    "kababjees('Malai Boti', 'Pepsi',)          \n",
+    "    "
    ]
   }
  ],
