--- a/classs5.ipynb
+++ b/classs5.ipynb
@@ -2843,9 +2843,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "toyota\n",
+      "2.8 million\n",
+      "blue\n",
+      "3.0 million\n"
+     ]
+    }
+   ],
    "source": [
     "class Car():\n",
     "    def __init__(self, model, color, price):\n",
@@ -2867,7 +2878,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2892,17 +2903,40 @@
     "        print(\"This car has \" + str(self.odometer_reading) + \" miles on it.\")\n",
     "        \n",
     "    def update_odometer(self, mileage):\n",
-    "        self.odometer_reading = mileage"
+    "        self.odometer_reading = mileage\n",
+    "        if mileage >= self.odometer_reading:\n",
+    "            self.odometer_reading= mileage\n",
+    "        else:\n",
+    "            print(\"you can't roll back an odometer!\")\n",
+    "                "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "This car has 90 miles on it.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'2016 Audi A4'"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "my_new_car = Car('audi', 'a4', 2016)\n",
-    "my_new_car.update_odometer(50)\n",
+    "my_new_car.update_odometer(90)\n",
     "my_new_car.read_odometer()\n",
     "my_new_car.get_descriptive_name()"
    ]
@@ -2961,11 +2995,100 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 17-june-19\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Dog():\n",
+    "    \"\"\"A simple attempt to model a dog.\"\"\"\n",
+    "    def __init__(self, name, age):\n",
+    "        \"\"\"Initialize name and age attribute.\"\"\"\n",
+    "        self.name = name\n",
+    "        self.age = age\n",
+    "    \n",
+    "    def sit(self):\n",
+    "        \"\"\"Simulate a dog sitting in response to a command.\"\"\"\n",
+    "        print(self.name.title() + \"rolled over!\")\n",
+    "    \n",
+    "    def roll_over(self):\n",
+    "        \"\"\"Simulate a dog sitting in response to a command.\"\"\"\n",
+    "        print(self.name.title() + \"rolled over!\")\n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "my_new_dog = Dog(\"shepard\",3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<__main__.Dog object at 0x000001A34A9AA518>\n"
+     ]
+    }
+   ],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# inheritance\n",
+    "\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "class Car():\n",
+    "\"\"\"A simple attempt to represent a car.\"\"\"\n",
+    "def __init__(self, make, model, year):\n",
+    "self.make = make\n",
+    "self.model = model\n",
+    "self.year = year\n",
+    "self.odometer_reading = 0\n",
+    "def get_descriptive_name(self):\n",
+    "long_name = str(self.year) + ' ' + self.make + ' ' + self.model\n",
+    "return long_name.title()\n",
+    "def read_odometer(self):\n",
+    "print(\"This car has \" + str(self.odometer_reading) + \" miles on it.\")\n",
+    "def update_odometer(self, mileage):\n",
+    "if mileage >= self.odometer_reading:\n",
+    "self.odometer_reading = mileage\n",
+    "else:\n",
+    "print(\"You can't roll back an odometer!\")\n",
+    "def increment_odometer(self, miles):\n",
+    "self.odometer_reading += miles\n",
+    "\n",
+    "class ElectricCar(Car):\n",
+    "    def __init__(self, make, model, year):\n",
+    "\"\"\"Initialize attributes of the parent class.\"\"\"\n",
+    "x super().__init__(make, model, year)\n",
+    "y my_tesla = ElectricCar('tesla', 'model s', 2016)\n",
+    "print(my_tesla.get_descriptive_name())"
+   ]
   }
  ],
  "metadata": {
