--- a/classs5.ipynb
+++ b/classs5.ipynb
@@ -3058,37 +3058,190 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "class Car():\n",
-    "\"\"\"A simple attempt to represent a car.\"\"\"\n",
-    "def __init__(self, make, model, year):\n",
-    "self.make = make\n",
-    "self.model = model\n",
-    "self.year = year\n",
-    "self.odometer_reading = 0\n",
-    "def get_descriptive_name(self):\n",
-    "long_name = str(self.year) + ' ' + self.make + ' ' + self.model\n",
-    "return long_name.title()\n",
-    "def read_odometer(self):\n",
-    "print(\"This car has \" + str(self.odometer_reading) + \" miles on it.\")\n",
-    "def update_odometer(self, mileage):\n",
-    "if mileage >= self.odometer_reading:\n",
-    "self.odometer_reading = mileage\n",
-    "else:\n",
-    "print(\"You can't roll back an odometer!\")\n",
-    "def increment_odometer(self, miles):\n",
-    "self.odometer_reading += miles\n",
     "\n",
+    "    #attributes\n",
+    "    \n",
+    "    def __init__(self, make, model, year):\n",
+    "              \n",
+    "        self.make = make\n",
+    "        self.model = model\n",
+    "        self.year = year\n",
+    "        self.odometer_reading = 0\n",
+    "\n",
+    "        #behaviour\n",
+    "\n",
+    "    def get_descriptive_name(self):\n",
+    "        long_name = str(self.year) + ' ' + self.make + ' ' + self.model\n",
+    "        return long_name.title()\n",
+    "    def read_odometer(self):\n",
+    "        print(\"This car has \" + str(self.odometer_reading) + \" miles on it.\")\n",
+    "    def update_odometer(self, mileage):\n",
+    "        if mileage >= self.odometer_reading:\n",
+    "            self.odometer_reading = mileage\n",
+    "        else:\n",
+    "            print(\"You can't roll back an odometer!\")\n",
+    "    def increment_odometer(self, miles):\n",
+    "        self.odometer_reading += miles\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2016 Tesla Model S\n",
+      "<__main__.ElectricCar object at 0x000001FA9FE0B400>\n",
+      "<__main__.ElectricCar object at 0x000001FA9FE0B668>\n"
+     ]
+    }
+   ],
+   "source": [
     "class ElectricCar(Car):\n",
     "    def __init__(self, make, model, year):\n",
-    "\"\"\"Initialize attributes of the parent class.\"\"\"\n",
-    "x super().__init__(make, model, year)\n",
-    "y my_tesla = ElectricCar('tesla', 'model s', 2016)\n",
-    "print(my_tesla.get_descriptive_name())"
+    "\n",
+    "        super().__init__(make, model, year)\n",
+    "\n",
+    "my_tesla = ElectricCar('tesla', 'model s', 2016)\n",
+    "your_tesla = ElectricCar('Mesla', 'model z', 2018)\n",
+    "print(my_tesla.get_descriptive_name())\n",
+    "print(my_tesla)\n",
+    "print(your_tesla)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2016 Tesla Model S\n",
+      "This car has a 70-kwh battery\n"
+     ]
+    }
+   ],
+   "source": [
+    "class ElectricCar(Car):\n",
+    "    def __init__(self, make, model, year):\n",
+    "\n",
+    "        super().__init__(make, model, year)\n",
+    "        self.battery_size = 70\n",
+    "    def describe_battery(self):\n",
+    "        print(\"This car has a \" + str(self.battery_size) + \"-kwh battery\")\n",
+    "my_tesla = ElectricCar('tesla', 'model s', 2016)\n",
+    "\n",
+    "print(my_tesla.get_descriptive_name())\n",
+    "my_tesla.describe_battery()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class ElectricCar(Car):\n",
+    "    def __init__(self, make, model, year):\n",
+    "\n",
+    "        super().__init__(make, model, year)\n",
+    "        self.battery_size = 70\n",
+    "    def describe_battery(self):\n",
+    "        print(\"This car has a \" + str(self.battery_size) + \"-kwh battery\")\n",
+    "\n",
+    "    def fill_gas_tank(self):\n",
+    "        print(\"This car doesn't need a gas tank!\")\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2016 Tesla Model S\n",
+      "This car has a 70-kwh battery\n",
+      "This car doesn't need a gas tank!\n"
+     ]
+    }
+   ],
+   "source": [
+    "my_tesla = ElectricCar('tesla', 'model s', 2016)\n",
+    "\n",
+    "print(my_tesla.get_descriptive_name())\n",
+    "my_tesla.describe_battery()\n",
+    "my_tesla.fill_gas_tank()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Battery():\n",
+    "    def __init__(self, manufacturer, cycles, amperes, battery_size=70):\n",
+    "        \"initialize the battery's attributes.\"\n",
+    "        self.battery_size = battery_size\n",
+    "        self.manufacturer= manufacturer\n",
+    "        self.cycles=cycles\n",
+    "        self.amperes=amperes\n",
+    "    def describe_battery(self):\n",
+    "        print(\"This car has a \" + str(self.battery_size) + \"-kwh battery\")\n",
+    "        print(\"This car has a \" + str(self.manufacturer) + \" battery\")\n",
+    "        print(\"This car has a \" + str(self.amperes) + \" battery\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2016 Tesla Model S\n",
+      "This car has a 50-kwh battery\n",
+      "This car has a abc battery\n",
+      "This car has a 200amp battery\n",
+      "None\n"
+     ]
+    }
+   ],
+   "source": [
+    "class ElectricCar(Car):\n",
+    "    def __init__(self, make, model, year):\n",
+    "        super().__init__(make, model, year)\n",
+    "        self.battery =Battery(\"abc\", \"2500\", \"200amp\", 50)\n",
+    "        \n",
+    "my_tesla = ElectricCar('tesla', 'model s', 2016)\n",
+    "print(my_tesla.get_descriptive_name())\n",
+    "print(my_tesla.battery.describe_battery())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
